add test for NominatimService